# PBL4---Build-a-VPN-system

./: .gitignore  CMakeLists.txt  README.md  crypto_client.cpp  crypto_client.h  mac_config.ini  main.cpp  mainwindow.cpp  mainwindow.h  pbl4.pro  real_vpn_client.cpp  real_vpn_client.h  tls_wrapper_client.cpp  tls_wrapper_client.h  tun_interface.h  tun_interface_mac.cpp  tun_interface_win.cpp  vpn_client.cpp  vpn_client.h  vpn_config.ini  wintun.h
VPN/: CMakeLists.txt  PBL4.code-workspace  build.sh  create_tun.sh  debug_vpn.sh  generate_certificates.sh  security_test.sh  server.conf  setup_nat.sh  test_crypto.sh  test_python_security.py  test_security.sh  test_vpn_tunnel.sh  traffic_test.sh  vpn_server  wireshark_test.sh
VPN/certs/: server.crt  server.key
VPN/frontend/: index.html
VPN/src/: common.h  main.cpp  real_vpn_main.cpp
VPN/src/api/: web_serer.cpp
VPN/src/core/: base64.cpp  base64.h  client_manager.cpp  client_manager.h  config_manager.cpp  config_manager.h  crypto_engine.cpp  crypto_engine.h  packet_handler.cpp  packet_handler.h  real_vpn_server.cpp  real_vpn_server.h  tunnel_manager.cpp  tunnel_manager.h  vpn_server.cpp  vpn_server.h
VPN/src/crypto/: crypto_engine.cpp  crypto_engine.h  tls_wrapper.cpp  tls_wrapper.h
VPN/src/network/: socket_manager.cpp  socket_manager.h  tun_interface.cpp  tun_interface.h
VPN/src/utils/: server.conf
